--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,8 @@
 name: Go
-on: 
+on:
   push:
-    branches: master
+    branches:
+    - master
 jobs:
   build:
     name: Build
@@ -17,8 +18,10 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-    - name: Build
-      run: go build -v .
-
-    - name: GoReleaser Action
-      uses: goreleaser/goreleaser-action@v1.1.0
+    - name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v1
+      with:
+        version: latest
+        args: release --rm-dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
