--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
+    - name: test
+      run: go test -v -race -cover ./...
+
     - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v1
       with:
