--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,14 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.13
-      uses: actions/setup-go@v1
+    - name: Set up Go
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.13
+        go-version: 1.15
       id: go
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-    - name: test
-      run: go test -v -race -cover ./...
+    - run: make bootstrap-tools
+    - run: make lint
+    - run: make cover
+
+    - uses: codecov/codecov-action@v1
