--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,13 +12,18 @@ jobs:
     steps:
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: 1.19
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      uses: actions/checkout@v3
 
     - name: Run GoReleaser
-      run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} make release-with-docker
+      uses: goreleaser/goreleaser-action@v4
+      with:
+        version: latest
+        args: release --rm-dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
